# src/app/core/openapi/lingua-poly/model/models.ts
@@ -1,4 +1,5 @@
 export * from './defaultResponse';
+export * from './empty';
 export * from './token';
 export * from './user';
 export * from './userDraft';
